--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 default = ["cuda", "cpu"]
 cpu = []
 cuda = ["cudarc"]
+rayon = ["dep:rayon"]
 
 [dependencies]
 pyo3 = { version = "0.21", features = ["extension-module", "num-complex"] }
@@ -22,9 +23,10 @@ num-complex = "0.4"
 num-traits = "0.2"
 rand = "0.8"
 thiserror = "1.0"
-cudarc = { version = "0.18.2", optional = true, features = ["cuda-13010", "nvrtc", "cublas"] }
+cudarc = { version = "0.18.2", optional = true, features = ["cuda-12080", "nvrtc", "cublas"] }
 lazy_static = "1.4"
 half = "2.3"
+rayon = { version = "1.8", optional = true }
 
 [dev-dependencies]
 criterion = "0.5"
