--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 license = "Proprietary"
 
 [lib]
-name = "syntonic_core"
+name = "_core"
 crate-type = ["cdylib"]
 
 [features]
@@ -31,7 +31,3 @@ rayon = { version = "1.8", optional = true }
 [dev-dependencies]
 criterion = "0.5"
 approx = "0.5"
-
-[profile.release]
-lto = true
-codegen-units = 1
