--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,6 +13,7 @@ crate-type = ["cdylib"]
 default = ["cuda", "cpu"]
 cpu = []
 cuda = ["cudarc"]
+extension-module = ["pyo3/extension-module"]
 rayon = ["dep:rayon"]
 
 [dependencies]
