--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -15,7 +15,12 @@ sphinx:
   configuration: docs/source/conf.py
   fail_on_warning: false
 
-# Declare the Python requirements required to build your documentation
+# Install syntonic package and documentation dependencies
 python:
   install:
     - requirements: docs/requirements.txt
+    # Install syntonic from PyPI (requires package to be published)
+    # Uncomment this line once syntonic is published to PyPI:
+    # - method: pip
+    #   path: syntonic
+
