Add SRT Precision Policy and Sedenion Implementation Tests
- Introduced a new module for SRT Precision Policy enforcement, defining precision levels for various operations.
- Implemented a function to determine the precision policy based on operation type.
- Added comprehensive tests for the Sedenion class, covering creation, arithmetic operations, properties, and zero divisor detection.
- Included tests for Cayley-Dickson construction properties and dot product computations.

--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -4,6 +4,10 @@ version = "0.1.0"
 edition = "2021"
 license = "Proprietary"
 
+[[bin]]
+name = "generate_srt_constants"
+path = "src/bin/generate_srt_constants.rs"
+
 [lib]
 name = "_core"
 crate-type = ["cdylib"]
@@ -25,9 +29,10 @@ rand = "0.8"
 thiserror = "1.0"
 cudarc = { version = "0.18.2", optional = true, features = ["cuda-12080", "nvrtc", "cublas"] }
 lazy_static = "1.4"
-half = "2.3"
+half = { version = "2.3", features = ["std", "serde"] }
 rayon = { version = "1.8", optional = true }
 
 [dev-dependencies]
 criterion = "0.5"
 approx = "0.5"
+chrono = "0.4"
